Add listings and architectural info

--- a/CourseWork/course.tex
+++ b/CourseWork/course.tex
@@ -1,5 +1,4 @@
-\chapter{Введение}
-\section{MPI и потоки}
+\chapter{MPI и потоки}
 	
 	% http://www.mcs.anl.gov/research/projects/mpi/mpi-standard/mpi-report-2.0/node163.htm#Node163
 	Процесс в MPI может быть многопоточным. 
@@ -29,7 +28,7 @@
 	В MPI запрос может быть выполнен только один раз. 
 	Любая комбинация ожидания или теста, которая нарушает это правило, является ошибочной.
 	
-	\subsection{Инициализация}
+	\section{Инициализация}
 	Следующая функция может использоваться для инициализации MPI и инициализации среды потока MPI вместо \textit{MPI\_INIT}.
 	
 	\textit{MPI\_INIT\_THREAD(required, provided)}
@@ -62,10 +61,10 @@
 	В противном случае вызов вернет максимальный поддерживаемый уровень \textit{provided} > \textit{required} (таким образом, обеспечивающий более высокий уровень поддержки, чем требуется пользователю).
 	Наконец, если требование пользователя не может быть удовлетворено, тогда вызов вернёт максимально поддерживаемый уровень.
 	
-\chapter{ЯГСПП}
-	Ограничение реализации заключается в отсутствии рекурсии. Модуль не может передавать данные самому себе.
+\chapter{Реализация ЯГСПП}
+	Ограничение реализации заключается в отсутствии рекурсии. При этом возможны циклы.
 
-	\section{Принципы реализации}
+	\section{Особенности реализации}
 	\begin{itemize}
 		\item Модули распределяются между узлами вычислительной сети до начала вычислений. Каждый модуль исполняется только на закреплённом за ним узле сети. Принцип распределения не уточняется. В простейшем случае случайно и равномерно.
 		\item На каждом узле существует единственный поток, осуществляющий сообщение по MPI с вычислительной сетью.
@@ -74,6 +73,38 @@
 		\item После выполнения вычислений модуль определяет значения, которые будут переданы другим модулям. Значения отправляются в буфер. С помощью реестра модулей формируются сообщения и, если необходимо, передаются на другие узлы сети через нить MPI.
 	\end{itemize}
 	
+	Важной особенностью такой архитектуры является обособленность управляющей части программы от исполняющей, что позволяет представить общую архитектуру вычислительных узлов подобной вычислительной сети. На рисунке \ref{fig:architecture} изображены основные компоненты. Стрелками показаны направления обмена данными.
+	
+			\begin{figure*}[h]
+				\centering
+				\includegraphics[width=0.5\linewidth]{graph-scheme-cpp-architecture}
+				\caption{Общая архитектура вычислительных узлов ЯГСПП}
+				\label{fig:architecture}
+			\end{figure*}
+			
+	\FloatBarrier
+	
+	Легко заметить, что заданные ограничения наложены лишь на компоненты поддержки связи (использование MPI) и на модуль порождения процедур (использование нитей для запуска процедур модулей). Таким образом можно выделить общую часть - компоненту хранения данных и отслеживания состояния, которая может послужить каркассом для построения аналогичных систем. Например, как фреймворк для поддержки связи и порождения процедур можно использовать PVM или микросервисную архитектуру с поддержкой многопоточности.
+	
+\chapter{Результат реализации}
+ Для использования полученной библиотеки необходимо создать наследников класса \textit{\textbf{Procedure}} для каждого модуля, участвующего во взаимодействии.  В листинге ниже приведён пример процедуры, осуществляющей вывод в стандартный поток вывода данных и последующая отправка сообщения модулю 3 на вход 0.
+ 
+ \lstinputlisting[caption={Пример реализации процедуры}]{listings/example-procedure.cpp}
+ 
+ Далее необходимо в функции main проинициализировать модули, указав начальный и конечный модуль
+
+ \lstinputlisting[caption={Пример функции \textbf{main}}]{listings/example-main.cpp}
+ 
+ Модуль может быть одновременно начальным и конечным. Для спецификации такого модуля нужно использовать слияние флагов: $ \text{INITIAL | FINAL} $.
+ 
+ Процедура финального модуля должна сообщать о том, что обработка данных с указанным тегом завершена. Это необходимо для остановки исполняющей программы.
+ 
+ \lstinputlisting[caption={Пример функции \textbf{main}}]{listings/example-final-procedure.cpp}
+  
+Исходный код проекта доступен на GitHub \href{https://github.com/goto1134/graph-scheme-cpp-mpi}{https://github.com/goto1134/graph-scheme-cpp-mpi}.
+
+\chapter{Пример программы}
+
 
 
 	
