--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,12 +1,14 @@
 
 {\actuality} Введение в тему работы
 
-{\aim} Подготовить/реализовать/изучить.
+{\aim} Реализовать Язык граф-схемного потокового языка программирования в среде MPI.
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}
-  \item Задача 1
-  \item Задача 2
+  \item Изучить возможности MPI для реализации многопоточности в рамках одного узла.
+  \item Спроектировать общую архитектуру вычислительного узла сети.
+  \item Разработать базовую библиотеку для реализации ЯГСПП в различных средах.
+  \item Разработать реализацию в среде MPI на основе базовой библиотеки.
 \end{enumerate}
     
 
