--- a/common/concl.tex
+++ b/common/concl.tex
@@ -2,8 +2,8 @@
 %% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 \begin{enumerate}
-  \item На основе анализа \ldots
-  \item Численные исследования показали, что \ldots
-  \item Математическое моделирование показало \ldots
-  \item Для выполнения поставленных задач был создан \ldots
+	\item Изучены возможности MPI для реализации многопоточности в рамках одного узла.
+	\item Спроектирована общая архитектура вычислительного узла ЯГСПП.
+	\item Разработана базовая библиотека для реализации ЯГСПП в различных средах.
+	\item На основе базовой библиотеки разработана библиотека для реализации ЯГСПП в среде MPI.
 \end{enumerate}
